Skip sampleId validation based on testingDiagnosticsEnabled instead of enableTestCommands

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.0
    • Sharding NYC 2023-05-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      enableTestCommands is meant to be used for enable more commands not for changing the behavior for testing. That's what testingDiagnosticsEnabled is for. Here is where the check is. 

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: