SERVER-76475 Skip sampleId validation based on testingDiagnosticsEnabled instead of enableTestCommands